# asset-management-knowledge-graph

./: .env.example  .env.production.example  .gitignore  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
data/ontology/: amkg.ttl  asset-classes.ttl  sectors.ttl
docs/: architecture.md  data-sources.md  ontology-design.md
frontend/: .env.production.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  sidebar.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/esg/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/ingest/: page.tsx
frontend/src/app/ontology/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/portfolios/: page.tsx
frontend/src/lib/: api.ts  types.ts
src/amkg/: __init__.py  config.py
src/amkg/api/: __init__.py  app.py  deps.py  schemas.py
src/amkg/api/routes/: benchmarks.py  chat.py  discovery.py  esg.py  ingest.py  lineage.py  ontology.py  pipeline.py  portfolios.py  rdf.py  reasoning.py  vocabulary.py
src/amkg/graph/: __init__.py  client.py  queries.py  schema.py
src/amkg/llm/: __init__.py  cypher_agent.py  guardrails.py  prompts.py
src/amkg/models/: __init__.py  enums.py  nodes.py  relationships.py
src/amkg/pipeline/: __init__.py  base.py  cache.py  document_extractor.py  document_loader.py  loader.py  orchestrator.py
src/amkg/pipeline/fetchers/: esg_kaggle.py  ishares.py  yfinance_enricher.py
src/amkg/pipeline/transformers/: __init__.py  esg_transformer.py  etf_transformer.py
src/amkg/pipeline/validators/: __init__.py  quality.py
src/amkg/rdf/: __init__.py  exporter.py  reasoner.py
tests/: conftest.py
tests/unit/: test_guardrails.py  test_models.py  test_validators.py
(+1 files in other folders)
