[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amkg"
version = "1.0.0"
description = "Knowledge graph for asset management: portfolios, benchmarks, ESG ratings, and performance analytics powered by Neo4j"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Keno Omogha", email = "omoghakeno1@gmail.com"}]
keywords = ["knowledge-graph", "neo4j", "asset-management", "esg", "portfolio"]

dependencies = [
    "neo4j>=5.19,<6",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "anthropic>=0.25",
    "httpx>=0.27",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[neo4j]>=4.4",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
amkg-pipeline = "amkg.pipeline.orchestrator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amkg"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/amkg/graph/queries.py" = ["E501"]  # Cypher queries are long by nature
"src/amkg/llm/prompts.py" = ["E501"]   # LLM prompts are long strings by nature

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Neo4j (deselect with '-m \"not integration\"')",
    "slow: long-running tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true
